--- a/d/streamstyle.css
+++ b/d/streamstyle.css
@@ -3,10 +3,13 @@
      }
 
      .video-actions {
-         width: 100%;
-         display: flex;
+         /* width: 100%; */
+         /* display: flex; */
          justify-content: center;
          /* display: none; */
+         background: #efefef;
+         margin: 20px;
+         border-radius: 7px;
      }
 
      .video-actions-inner {
