feat: related videos

--- a/assets/style.css
+++ b/assets/style.css
@@ -357,6 +357,35 @@ video {
     opacity: 0.9;
 }
 
+#related-videos {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 2rem;
+    margin-bottom: 32px;
+}
+
+.video-item {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 16px;
+    cursor: pointer;
+}
+
+.video-item > img {
+    border-radius: 3px;
+    width: 100%;
+    aspect-ratio: 16/9;
+    background-color: grey;
+}
+
+.video-item > strong {
+    margin-top: 8px;
+    font-size: 14px;
+    text-align: center;
+}
+
 @media (max-width: 992px) {
     .video {
         margin-top: 0;
