fix: improve UI/UX

--- a/assets/style.css
+++ b/assets/style.css
@@ -377,7 +377,8 @@ video {
     border-radius: 3px;
     width: 100%;
     aspect-ratio: 16/9;
-    background-color: grey;
+    background-color: black;
+    object-fit: contain;
 }
 
 .video-item > strong {
